fix: adiciona z-index

--- a/src/styles/component.css
+++ b/src/styles/component.css
@@ -4,6 +4,7 @@ header{
     justify-content: space-between;
     align-items: center;
     position: fixed;
+    z-index: 1;
     top: 0;
     background-color: var(--preto);
     width: 100%;
